# MIASI_projekt

./: .coverage  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  test_file.py
.claude/: settings.local.json
scripts/: generate_parser.py
src/pylintool/: __init__.py  cli.py  models.py  scanner.py
src/pylintool/checkers/: __init__.py  heuristics.py  typecheck.py  whitespace.py
src/pylintool/grammar/: PyWhitespaceLexer.g4  PyWhitespaceParser.g4
tests/: test_bare_except.py  test_heuristics.py  test_magic_numbers.py  test_print_statements.py  test_scanner.py  test_todo_comments.py  test_typecheck.py  test_whitespace.py
tests/fixtures/: clean.py  messy.py
